XCF-813 - Fix cascading menus on IE so they drop down.  They are still a bit misaligned but work.
git-svn-id: http://scm.sipfoundry.org/rep/sipX/main@5869 a612230a-c5fa-0310-af8b-88eea846685b

--- a/sipXconfig/web/context/css/sipxconfig.css
+++ b/sipXconfig/web/context/css/sipxconfig.css
@@ -198,7 +198,8 @@ li.tab.active a:link,li.tab.active a:hover,li.tab.active a:visited
 	left: auto;
 }
 
-#navigation li:hover ul { 
+#navigation li:hover ul,
+#navigation li.over ul { 
 	display: block; 
 }
 
@@ -211,7 +212,8 @@ li.tab.active a:link,li.tab.active a:hover,li.tab.active a:visited
 	border: 1px solid #FFFFCC;
 }
 
-#navigation a:hover {
+#navigation a:hover,
+#navigation a.over {
 	color: #003333;
 	background: #999999;
 }
